--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,21 @@
       .container {
         position: relative;
         height: auto;
-        margin-right: 385px;
+        margin-right: 100vh;
       }
       
       .card-wrapper,
       .card-wrapper1,
       .card-wrapper2 {
         width: 256%;
-        height: 355px;
+        height: 581px;
         background-color: rgb(255, 255, 255);
         position: relative;
         display: flex;
         box-shadow: 0px 40px 20px -20px rgba(0, 0, 0, 0.25);
         transform: perspective(1500px);
         transform-style: preserve-3d;
-        margin: 10%;
+        margin: 9rem;
       }
       
       .video-wrapper {
@@ -39,8 +39,8 @@
       }
       
       .video-wrapper iframe {
-        width: 347px;
-        height: 355px;
+        width: 400px;
+        height: 581px;
         object-fit: cover;
       }
       
@@ -80,7 +80,7 @@
       
       .content-wrap .title {
         color: #ffffff;
-        font-size: 5vw;
+        font-size: 5rem;
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 0.4vw;
@@ -103,7 +103,7 @@
       .content-wrap .content h3 {
         margin-bottom: 30px;
         color: #a5a5a5;
-        font-size: 2vw;
+        font-size: 1.5rem;
         font-weight: 400;
       }
     }
@@ -187,7 +187,7 @@
           
           .content-wrap .title {
             color: #ffffff;
-            font-size: 5vw;
+            font-size: 5rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.4vw;
@@ -210,15 +210,16 @@
           .content-wrap .content h3 {
             margin-bottom: 30px;
             color: #a5a5a5;
-            font-size: 2vw;
+            font-size: 1.5rem;
             font-weight: 400;
           }
         }
     /*mobile phone*/
     @media only screen and (max-width: 600px) {
         body{
-            font-size: 14px;
+            font-size: 1rem;
             background: linear-gradient(90deg, #25d715aa 0%, #2eac79 80%);
+            color: lightslategrey;
     
         }
     
